--- a/index.html
+++ b/index.html
@@ -1,214 +1,292 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dino Wedding</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Sacramento&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Sacramento&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="cd/cyber.min.css">
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="stylesheet" href="cd/cyber.min.css" />
     <script src="cd/simplyCountdown.umd.js"></script>
     <!-- Bootsrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-</head>
-
-<body>
-
-    <section id="hero" class="hero w-100 h-100 p-100 mx-auto text-center d-flex 
-        justify-content-center align-items-center text-white">
-        <main class="hero-main">
-            <h4 class="salam">
-                Kepada Bapak/Ibu/Saudara/i
-            </h4>
-            <h1 class="pengantin">Agus handless & Miftah Kindless</h1>
-            <p class="desk">Akan melaksanakan resepsi pernikahan dalam:</p>
-            <div class="simply-countdown"></div>
-            <a href="#home" class="btn btn-lg">Lihat Undangan</a>
-        </main>
+  <body>
+    <section
+      id="hero"
+      class="hero w-100 h-100 p-100 mx-auto text-center d-flex justify-content-center align-items-center text-white"
+    >
+      <main class="hero-main">
+        <h4 class="salam">Kepada Bapak/Ibu/Saudara/i</h4>
+        <h1 class="pengantin">Agus handless & Miftah Kindless</h1>
+        <p class="desk">Akan melaksanakan resepsi pernikahan dalam:</p>
+        <div class="simply-countdown"></div>
+        <a href="#home" class="btn btn-lg">Lihat Undangan</a>
+      </main>
     </section>
 
     <nav class="navbar navbar-expand-md sticky-top mynavbar">
-        <div class="container">
-            <a class="navbar-brand" href="#">Resepsi Pernikahan</a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Resepsi Pernikahan</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <div class="navbar-nav ms-auto">
-                        <a class="nav-link" href="#home">Home</a>
-                        <a class="nav-link" href="#info" target="_parent">Info</a>
-                        <a class="nav-link" href="#story">Story</a>
-                        <a class="nav-link" href="#galeri">Galery</a>
-                        <a class="nav-link" href="#rsvp">RSVP</a>
-                        <a class="nav-link" href="#gifts">Gifts</a>
-                    </div>
-                </div>
+      <div class="container">
+        <a class="navbar-brand" href="#">Resepsi Pernikahan</a>
+        <button
+          class="navbar-toggler border-0"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              Resepsi Pernikahan
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#info" target="_parent">Info</a>
+              <a class="nav-link" href="#story">Story</a>
+              <a class="nav-link" href="#galeri">Galery</a>
+              <a class="nav-link" href="#rsvp">RSVP</a>
+              <a class="nav-link" href="#gifts">Gifts</a>
             </div>
+          </div>
         </div>
+      </div>
     </nav>
 
     <section id="home" class="home">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8 text-center">
-                    <h2 class="text-center">Acara Pernikahan</h2>
-                    <h3>
-                        Diselenggarakan pada tanggal 11 Maret 2025 di lapas, Jawa Barat
-                    </h3>
-                    <p>
-                        Oleh karena itu, kami mengundang Bapak/Ibu/Saudara/i untuk
-                        hadir dan memberikan doa restu pada acara pernikahan kami
-                    </p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h2 class="text-center">Acara Pernikahan</h2>
+            <h3>
+              Diselenggarakan pada tanggal 11 Maret 2025 di lapas, Jawa Barat
+            </h3>
+            <p>
+              Oleh karena itu, kami mengundang Bapak/Ibu/Saudara/i untuk hadir
+              dan memberikan doa restu pada acara pernikahan kami
+            </p>
+          </div>
         </div>
+      </div>
 
-        <div class="row couple">
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-8 text-end">
-                        <h3>Agus Handless</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptates consequuntur
-                            quisquam alias culpa nulla?</p>
-                        <p>Putra dari Bapak Rusadi <br> dan <br> Ibu Sumyati</p>
-                    </div>
-                    <div class="col-4">
-                        <img src="img/agus.png" alt="agus" class="img-responsive rounded-circle">
-                    </div>
-                </div>
+      <div class="row couple">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-8 text-end">
+              <h3>Agus Handless</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                voluptates consequuntur quisquam alias culpa nulla?
+              </p>
+              <p>
+                Putra dari Bapak Rusadi <br />
+                dan <br />
+                Ibu Sumyati
+              </p>
             </div>
-            <span class="heart"><i class="bi bi-heart-fill"></i></span>
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-4">
-                        <img src="img/miftah.png" alt="agus" class="img-responsive rounded-circle">
-                    </div>
-                    <div class="col-8">
-                        <h3>Miftah Kindless</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptates consequuntur
-                            quisquam alias culpa nulla?</p>
-                        <p>Putra dari Bapak Jayadi <br> dan <br> Ibu Rosa</p>
-                    </div>
-                </div>
+            <div class="col-4">
+              <img
+                src="img/agus.png"
+                alt="agus"
+                class="img-responsive rounded-circle"
+              />
             </div>
+          </div>
         </div>
+        <span class="heart"><i class="bi bi-heart-fill"></i></span>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-4">
+              <img
+                src="img/miftah.png"
+                alt="agus"
+                class="img-responsive rounded-circle"
+              />
+            </div>
+            <div class="col-8">
+              <h3>Miftah Kindless</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                voluptates consequuntur quisquam alias culpa nulla?
+              </p>
+              <p>
+                Putra dari Bapak Jayadi <br />
+                dan <br />
+                Ibu Rosa
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="info" class="info">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8 col-10 text-center">
-                    <h2>Informasi Acara</h2>
-                    <p class="alamat">RT.001/RW.012, Buaran Indah, Tangerang, Tangerang City, Banten 15119</p>
-                    <a href="https://maps.app.goo.gl/ijiMyiYu3dQMxxSv9" target="_blank"
-                        class="btn btn-light btn-sm my-3">Klik Untuk Membuka Peta</a>
-                    <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. manakala tiba di tujuan
-                        namun tidak ada tanda tanda
-                        sedang dilangsungkan pernikahan, bisa jadi anda salah jadwal, atau salah tempat
-                    </p>
-                </div>
-            </div>
-
-            <div class="row justify-content-center mt-4">
-                <div class="col-md-5 col-10">
-                    <div class="card text-center text-bg-light">
-                        <div class="card-header">
-                            Akad Nikah
-                        </div>
-                        <div class="card-body">
-                            <div class="row justify-content-center">
-                                <div class="col-md-6">
-                                    <i class="bi bi-clock-history d-block"></i>
-                                    <span>08:00 - 10:00</span>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <i class="bi bi-calendar3 d-block"></i>
-                                    <span>Selasa, 11 Maret 2025</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card-footer">
-                            Saat acara akad diharapkan untuk kondusif untuk menjaga kekhidmatan dan kekhusu'an
-                            seluruh prosesi
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-5 col-10">
-                    <div class="card text-center text-bg-light">
-                        <div class="card-header">
-                            Resepsi
-                        </div>
-                        <div class="card-body">
-                            <div class="row justify-content-center">
-                                <div class="col-md-6">
-                                    <i class="bi bi-clock-history d-block"></i>
-                                    <span>11:00 - Selesai</span>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <i class="bi bi-calendar3 d-block"></i>
-                                    <span>Selasa, 11 Maret 2025</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card-footer">
-                            Saat acara akad diharapkan untuk kondusif untuk menjaga kekhidmatan dan kekhusu'an
-                            seluruh prosesi
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Informasi Acara</h2>
+            <p class="alamat">
+              RT.001/RW.012, Buaran Indah, Tangerang, Tangerang City, Banten
+              15119
+            </p>
+            <a
+              href="https://maps.app.goo.gl/ijiMyiYu3dQMxxSv9"
+              target="_blank"
+              class="btn btn-light btn-sm my-3"
+              >Klik Untuk Membuka Peta</a
+            >
+            <p class="description">
+              Diharapkan untuk tidak salah alamat dan tanggal. manakala tiba di
+              tujuan namun tidak ada tanda tanda sedang dilangsungkan
+              pernikahan, bisa jadi anda salah jadwal, atau salah tempat
+            </p>
+          </div>
         </div>
+
+        <div class="row justify-content-center mt-4">
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light">
+              <div class="card-header">Akad Nikah</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock-history d-block"></i>
+                    <span>08:00 - 10:00</span>
+                  </div>
+
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar3 d-block"></i>
+                    <span>Selasa, 11 Maret 2025</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-footer">
+                Saat acara akad diharapkan untuk kondusif untuk menjaga
+                kekhidmatan dan kekhusu'an seluruh prosesi
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light">
+              <div class="card-header">Resepsi</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock-history d-block"></i>
+                    <span>11:00 - Selesai</span>
+                  </div>
+
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar3 d-block"></i>
+                    <span>Selasa, 11 Maret 2025</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="card-footer">
+                Saat acara akad diharapkan untuk kondusif untuk menjaga
+                kekhidmatan dan kekhusu'an seluruh prosesi
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <section id="story" class="story">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Bagaimana kami bertemu</span>
+            <h2>Our Story</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Blanditiis voluptatem, voluptatibus placeat quia nemo iste?
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <ul class="timeline">
+              <li>
+                <div class="timelien-image"></div>
+
+                <div class="timeline-panel">
+                  <div class="timeline=heading">
+                    <h3>Pertama Buat Masalah</h3>
+                    <span>12 Desember 2024</span>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 
     <script>
-        simplyCountdown(".simply-countdown", {
-            year: 2025,
-            month: 3,
-            day: 11,
-            hours: 8,
-
-        });
+      simplyCountdown(".simply-countdown", {
+        year: 2025,
+        month: 3,
+        day: 11,
+        hours: 8,
+      });
     </script>
 
     <script>
-        const stickyTop = document.querySelector('.sticky-top');
-        const offCanvas = document.querySelector('.offcanvas');
-    
-        offCanvas.addEventListener('show.bs.offcanvas', function () {
-            stickyTop.style.overflow = 'visible';
-        });
+      const stickyTop = document.querySelector(".sticky-top");
+      const offCanvas = document.querySelector(".offcanvas");
 
-        offCanvas.addEventListener('hidden.bs.offcanvas', function () {
-            stickyTop.style.overflow = 'hidden';
-        });
+      offCanvas.addEventListener("show.bs.offcanvas", function () {
+        stickyTop.style.overflow = "visible";
+      });
+
+      offCanvas.addEventListener("hidden.bs.offcanvas", function () {
+        stickyTop.style.overflow = "hidden";
+      });
     </script>
-</body>
-
+  </body>
 </html>
