memperbaiki bug off canvas

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
 
       offCanvas.addEventListener("show.bs.offcanvas", function () {
         stickyTop.style.overflow = "visible";
+        offCanvas.style.width = "45%";
       });
 
       offCanvas.addEventListener("hidden.bs.offcanvas", function () {
