--- a/index.html
+++ b/index.html
@@ -246,13 +246,34 @@
           <div class="col">
             <ul class="timeline">
               <li>
-                <div class="timelien-image"></div>
+                <div class="timeline-image" style="background-image: url(img/sekolah2.jpg);"></div>
 
                 <div class="timeline-panel">
                   <div class="timeline=heading">
                     <h3>Pertama Buat Masalah</h3>
-                    <span>12 Desember 2024</span>
+                    <span>12 November 2024</span>
                   </div>
+                  <div class="timeline-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Blanditiis voluptatem, voluptatibus placeat quia nemo iste?
+                    </p>
+                </div>
+              </li>
+
+              <li>
+                <div class="timeline-image" style="background-image: url(img/kolam.jpg);"></div>
+
+                <div class="timeline-panel">
+                  <div class="timeline=heading">
+                    <h3>Mulai jadi Tersangka</h3>
+                    <span>15 Desember 2024</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Blanditiis voluptatem, voluptatibus placeat quia nemo iste?
+                    </p>
                 </div>
               </li>
             </ul>
@@ -283,7 +304,6 @@
 
       offCanvas.addEventListener("show.bs.offcanvas", function () {
         stickyTop.style.overflow = "visible";
-        offCanvasBody.style.width = "50%";
       });
 
       offCanvas.addEventListener("hidden.bs.offcanvas", function () {
